plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.15'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.letspeppol'
version = '0.0.1-SNAPSHOT'
description = 'App backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.17'
    implementation 'org.springframework.graphql:spring-graphql'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.hibernate.orm:hibernate-community-dialects'
    implementation 'org.postgresql:postgresql:42.7.8'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'com.github.loki4j:loki-logback-appender:2.0.1'

    implementation 'com.helger.phive:phive-api:11.0.1'
    implementation 'com.helger.phive:phive-result:11.0.1'
    implementation 'com.helger.phive:phive-ves-engine:11.0.1'
    implementation 'com.helger.phive:phive-xml:11.0.1'
    implementation 'com.helger.phive.rules:phive-rules-peppol:4.0.3'
    implementation 'com.helger.phive.rules:phive-rules-en16931:4.0.3'
    implementation 'com.helger.phive.rules:phive-rules-ubl:4.0.3'
    implementation 'com.helger:ddd:0.7.1'

    // XSLT-based PDF generation
    implementation 'com.openhtmltopdf:openhtmltopdf-core:1.0.10'
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
    implementation 'com.openhtmltopdf:openhtmltopdf-slf4j:1.0.10'

    runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Generate UBL invoices in tests
    testImplementation 'com.helger.ubl:ph-ubl21:10.0.0'

    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootJar') {
	archiveFileName = 'app.jar'
}
